# mastr-city-dashboard

./: .gitignore  README.md  renovate.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postcreate.sh
.devcontainer/config/: 000-default.conf
.github/workflows/: import.yml  release-server.yml  release.yml  test-importer.yml  test-rust.yml  test-server.yml  test.yml
docs/: convert.php  sql-analysis.md
docs/mastr-api/patchnotes/: v23.2.112.txt
docs/schema/: importer.md
importer/: Cargo.toml
importer/assets/mastr/wsdl/: mastr.wsdl  mastrbasetypes.xsd
importer/assets/mastr/xsd/: mastrservicetypes_akteur.xsd  mastrservicetypes_anlage.xsd
importer/resources/mastr/wsdl/: mastr.wsdl  mastrbasetypes.xsd
importer/resources/mastr/xsd/: mastrservicetypes_mastrqs.xsd
importer/src/: main.rs
importer/src/client/: mod.rs  soap_client.rs
scripts/: dump_into_docker.sh
server/: .env  .env.sample  composer.json
server/config/: services.yaml
server/src/Command/: ImportCommand.php
server/src/Controller/: ApiController.php  DashboardController.php  UiController.php
server/src/Entity/: ImportData.php
server/src/Importer/: SoapClient.php  SolarFacade.php
server/src/Marktstammdatenregister/: SolarFacade.php
server/src/Repository/: ImportDataRepository.php
server/templates/: base.html.twig
server/templates/default/: dashboard.html.twig  detail.html.twig  diff.html.twig  imports.html.twig  index.html.twig  monitoring.html.twig  netz.html.twig  quality.html.twig  table.html.twig  validation.html.twig
(+12 files in other folders)
