[package]
name = "importer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
clap = { version = "4.0.32", features = ["derive"] }
dotenv = { version = "0.15.0" }
log = { version = "0.4.14" }
# this is needed for reqwest/savon, better would be to install openssl in docker container
openssl = { version = "0.10", features = ["vendored"] } 
reqwest = { version = "^0.11.20", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
yaserde = { version = "0.8" }
yaserde_derive = { version = "0.8" }
#serde = { version = "^1.0.188", features = ["derive"] }
#serde_json = "1.0"

[env]
RUST_LOG="warn"